fix: tooltip was overflowing

--- a/src/app.css
+++ b/src/app.css
@@ -3,5 +3,9 @@
 @tailwind utilities;
 
 :root {
-	color-scheme: dark light;
+    color-scheme: dark light;
+}
+
+body {
+    overflow: hidden;
 }
